--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,14 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-image-gallery": "^1.2.11",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-image-gallery": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0-beta.0",
