minor design changes

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ media/avatars/20200821_150119_FpRQQwG.jpg
 media/avatars/20200821_150119.jpg
 media/room_images/20200821_150119.jpg
 media/room_images/dog.jpg
+media/apartment_images/apartment1_zMGwBb7.jpg
+media/apartment_images/apartment2_E8B6eLh.jpg
+media/room_images/apartment1_iwzxE7t.jpg
+media/room_images/apartment2_1gI5Eda.jpg
+media/room_images/apartment2_9l46Jpt.jpg
