--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ media/apartment_images/apartment2_E8B6eLh.jpg
 media/room_images/apartment1_iwzxE7t.jpg
 media/room_images/apartment2_1gI5Eda.jpg
 media/room_images/apartment2_9l46Jpt.jpg
+node_modules
