Add React app and configure Django to serve it

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,16 @@ media/room_images/apartment1_iwzxE7t.jpg
 media/room_images/apartment2_1gI5Eda.jpg
 media/room_images/apartment2_9l46Jpt.jpg
 node_modules
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.sqlite3
+*.pyc
+*.pyo
+*.pyd
+*.sqlite3
+*.vscode
+venv/
+node_modules/
+myproject/static/reactapp/
