--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,17 @@ __pycache__/
 venv/
 node_modules/
 myproject/static/reactapp/
+backend/apartner/__pycache__/__init__.cpython-311.pyc
+backend/apartner/__pycache__/settings.cpython-311.pyc
+backend/apartner/__pycache__/urls.cpython-311.pyc
+backend/core/__pycache__/__init__.cpython-311.pyc
+backend/core/__pycache__/admin.cpython-311.pyc
+backend/core/__pycache__/apps.cpython-311.pyc
+backend/core/__pycache__/filters.cpython-311.pyc
+backend/core/__pycache__/models.cpython-311.pyc
+backend/core/__pycache__/pagination.cpython-311.pyc
+backend/core/__pycache__/permissions.cpython-311.pyc
+backend/core/__pycache__/serializers.cpython-311.pyc
+backend/core/__pycache__/urls.cpython-311.pyc
+backend/core/__pycache__/validators.cpython-311.pyc
+backend/core/__pycache__/views.cpython-311.pyc
